--- a/TankBrain_firmware/platformio.ini
+++ b/TankBrain_firmware/platformio.ini
@@ -62,4 +62,4 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.5.0
     adafruit/Adafruit SSD1306@^2.4.0
     olkal/HX711_ADC@^1.2.1
-    ; jdolinay/avr-debugger @ ~1.1        ; Comment out if not using debug env
+    jdolinay/avr-debugger @ ~1.1        ; Comment out if not using debug env
